[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain_modus"
version = "0.1.0"
description = "A Python package for LangChain integrations."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Guy Cohen", email = "gcohen.dev@gmail.com" }]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
